move description after input boxes to fix alignment

--- a/fpo-web/src/_survey.scss
+++ b/fpo-web/src/_survey.scss
@@ -257,6 +257,10 @@ h4.sv_page_title {
   .accept-row {
     padding-top: 0.8em;
   }
+  .survey-desc {
+    padding-top: 0.8em;
+    margin-bottom: 5px;
+  }
 }
 
 .glossary-link::after {
